[package]
name = "base"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "No description yet"
readme = "README.md"
homepage = "https://github.com/PlexSheep/rs-base"
repository = "https://github.com/PlexSheep/rs-base"
keywords = ["template"]


[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
